Add RSS feed parsing & loading to ES

--- a/airflow/airflow.cfg
+++ b/airflow/airflow.cfg
@@ -127,7 +127,7 @@ load_examples = False
 #
 # Variable: AIRFLOW__CORE__PLUGINS_FOLDER
 #
-plugins_folder = /home/luke/projects/clio/airflow/plugins
+plugins_folder = /opt/airflow/plugins
 
 # Should tasks be executed via forking of the parent process
 # 
