--- a/requirements.txt
+++ b/requirements.txt
@@ -20,13 +20,22 @@ alembic==1.13.2
     # via
     #   -c airflow-constraints.txt
     #   apache-airflow
+amqp==5.2.0
+    # via
+    #   -c airflow-constraints.txt
+    #   kombu
+annotated-types==0.7.0
+    # via
+    #   -c airflow-constraints.txt
+    #   pydantic
 anyio==4.4.0
     # via
     #   -c airflow-constraints.txt
     #   httpx
-apache-airflow==2.10.0
+apache-airflow[celery]==2.10.0
     # via
     #   -r requirements.in
+    #   apache-airflow-providers-celery
     #   apache-airflow-providers-common-compat
     #   apache-airflow-providers-common-io
     #   apache-airflow-providers-common-sql
@@ -36,6 +45,10 @@ apache-airflow==2.10.0
     #   apache-airflow-providers-imap
     #   apache-airflow-providers-smtp
     #   apache-airflow-providers-sqlite
+apache-airflow-providers-celery==3.7.3
+    # via
+    #   -c airflow-constraints.txt
+    #   apache-airflow
 apache-airflow-providers-common-compat==1.1.0
     # via
     #   -c airflow-constraints.txt
@@ -86,6 +99,8 @@ asgiref==3.8.1
     #   -c airflow-constraints.txt
     #   apache-airflow
     #   apache-airflow-providers-http
+async-timeout==4.0.3
+    # via redis
 attrs==24.2.0
     # via
     #   -c airflow-constraints.txt
@@ -97,18 +112,35 @@ babel==2.16.0
     # via
     #   -c airflow-constraints.txt
     #   flask-babel
+billiard==4.2.0
+    # via
+    #   -c airflow-constraints.txt
+    #   celery
 blinker==1.8.2
     # via
     #   -c airflow-constraints.txt
     #   apache-airflow
+blis==0.7.11
+    # via thinc
 cachelib==0.9.0
     # via
     #   -c airflow-constraints.txt
     #   flask-caching
     #   flask-session
+catalogue==2.0.10
+    # via
+    #   spacy
+    #   srsly
+    #   thinc
+celery[redis]==5.4.0
+    # via
+    #   -c airflow-constraints.txt
+    #   apache-airflow-providers-celery
+    #   flower
 certifi==2024.7.4
     # via
     #   -c airflow-constraints.txt
+    #   elastic-transport
     #   httpcore
     #   httpx
     #   requests
@@ -127,13 +159,33 @@ charset-normalizer==3.3.2
 click==8.1.7
     # via
     #   -c airflow-constraints.txt
+    #   celery
+    #   click-didyoumean
+    #   click-plugins
+    #   click-repl
     #   clickclick
     #   flask
     #   flask-appbuilder
+    #   nltk
+    #   typer
+click-didyoumean==0.3.1
+    # via
+    #   -c airflow-constraints.txt
+    #   celery
+click-plugins==1.1.1
+    # via
+    #   -c airflow-constraints.txt
+    #   celery
+click-repl==0.3.0
+    # via
+    #   -c airflow-constraints.txt
+    #   celery
 clickclick==20.10.2
     # via
     #   -c airflow-constraints.txt
     #   connexion
+cloudpathlib==0.18.1
+    # via weasel
 colorama==0.4.6
     # via
     #   -c airflow-constraints.txt
@@ -142,6 +194,10 @@ colorlog==6.8.2
     # via
     #   -c airflow-constraints.txt
     #   apache-airflow
+confection==0.1.5
+    # via
+    #   thinc
+    #   weasel
 configupdater==3.2
     # via
     #   -c airflow-constraints.txt
@@ -162,6 +218,11 @@ cryptography==41.0.7
     # via
     #   -c airflow-constraints.txt
     #   apache-airflow
+cymem==2.0.8
+    # via
+    #   preshed
+    #   spacy
+    #   thinc
 deprecated==1.2.14
     # via
     #   -c airflow-constraints.txt
@@ -187,10 +248,20 @@ docutils==0.16
     # via
     #   -c airflow-constraints.txt
     #   python-daemon
+elastic-transport==8.13.1
+    # via
+    #   -c airflow-constraints.txt
+    #   elasticsearch
+elasticsearch==8.14.0
+    # via
+    #   -c airflow-constraints.txt
+    #   -r requirements.in
 email-validator==2.2.0
     # via
     #   -c airflow-constraints.txt
     #   flask-appbuilder
+feedparser==6.0.11
+    # via -r requirements.in
 filelock==3.15.4
     # via
     #   -c airflow-constraints.txt
@@ -248,6 +319,10 @@ flask-wtf==1.2.1
     #   -c airflow-constraints.txt
     #   apache-airflow
     #   flask-appbuilder
+flower==2.0.1
+    # via
+    #   -c airflow-constraints.txt
+    #   apache-airflow-providers-celery
 frozenlist==1.4.1
     # via
     #   -c airflow-constraints.txt
@@ -262,6 +337,7 @@ google-re2==1.1.20240702
     # via
     #   -c airflow-constraints.txt
     #   apache-airflow
+    #   apache-airflow-providers-celery
     #   apache-airflow-providers-fab
 googleapis-common-protos==1.63.2
     # via
@@ -292,6 +368,10 @@ httpx==0.27.0
     # via
     #   -c airflow-constraints.txt
     #   apache-airflow
+humanize==4.10.0
+    # via
+    #   -c airflow-constraints.txt
+    #   flower
 identify==2.6.0
     # via
     #   -c airflow-constraints.txt
@@ -331,10 +411,13 @@ jinja2==3.1.4
     #   flask
     #   flask-babel
     #   python-nvd3
+    #   spacy
 jmespath==0.10.0
     # via
     #   -c airflow-constraints.txt
     #   apache-airflow-providers-fab
+joblib==1.4.2
+    # via nltk
 jsonschema==4.23.0
     # via
     #   -c airflow-constraints.txt
@@ -345,6 +428,16 @@ jsonschema-specifications==2023.12.1
     # via
     #   -c airflow-constraints.txt
     #   jsonschema
+kombu==5.4.0
+    # via
+    #   -c airflow-constraints.txt
+    #   celery
+langcodes==3.4.0
+    # via spacy
+langdetect==1.0.9
+    # via -r requirements.in
+language-data==1.2.0
+    # via langcodes
 lazy-object-proxy==1.10.0
     # via
     #   -c airflow-constraints.txt
@@ -366,6 +459,8 @@ mako==1.3.5
     # via
     #   -c airflow-constraints.txt
     #   alembic
+marisa-trie==1.2.0
+    # via language-data
 markdown-it-py==3.0.0
     # via
     #   -c airflow-constraints.txt
@@ -415,10 +510,23 @@ multidict==6.0.5
     #   -c airflow-constraints.txt
     #   aiohttp
     #   yarl
+murmurhash==1.0.10
+    # via
+    #   preshed
+    #   spacy
+    #   thinc
+nltk==3.9.1
+    # via textblob
 nodeenv==1.9.1
     # via
     #   -c airflow-constraints.txt
     #   pre-commit
+numpy==1.26.4
+    # via
+    #   -c airflow-constraints.txt
+    #   blis
+    #   spacy
+    #   thinc
 opentelemetry-api==1.26.0
     # via
     #   -c airflow-constraints.txt
@@ -473,6 +581,9 @@ packaging==24.1
     #   limits
     #   marshmallow
     #   marshmallow-sqlalchemy
+    #   spacy
+    #   thinc
+    #   weasel
 pathspec==0.12.1
     # via
     #   -c airflow-constraints.txt
@@ -493,10 +604,22 @@ pre-commit==3.8.0
     # via
     #   -c airflow-constraints.txt
     #   -r requirements.in
+preshed==3.0.9
+    # via
+    #   spacy
+    #   thinc
 prison==0.2.1
     # via
     #   -c airflow-constraints.txt
     #   flask-appbuilder
+prometheus-client==0.20.0
+    # via
+    #   -c airflow-constraints.txt
+    #   flower
+prompt-toolkit==3.0.47
+    # via
+    #   -c airflow-constraints.txt
+    #   click-repl
 protobuf==4.25.4
     # via
     #   -c airflow-constraints.txt
@@ -506,10 +629,25 @@ psutil==6.0.0
     # via
     #   -c airflow-constraints.txt
     #   apache-airflow
+psycopg2-binary==2.9.9
+    # via
+    #   -c airflow-constraints.txt
+    #   -r requirements.in
 pycparser==2.22
     # via
     #   -c airflow-constraints.txt
     #   cffi
+pydantic==2.8.2
+    # via
+    #   -c airflow-constraints.txt
+    #   confection
+    #   spacy
+    #   thinc
+    #   weasel
+pydantic-core==2.20.1
+    # via
+    #   -c airflow-constraints.txt
+    #   pydantic
 pygments==2.18.0
     # via
     #   -c airflow-constraints.txt
@@ -529,6 +667,7 @@ python-dateutil==2.9.0.post0
     # via
     #   -c airflow-constraints.txt
     #   apache-airflow
+    #   celery
     #   croniter
     #   flask-appbuilder
     #   pendulum
@@ -547,6 +686,7 @@ pytz==2024.1
     #   -c airflow-constraints.txt
     #   croniter
     #   flask-babel
+    #   flower
 pyyaml==6.0.2
     # via
     #   -c airflow-constraints.txt
@@ -554,11 +694,19 @@ pyyaml==6.0.2
     #   clickclick
     #   connexion
     #   pre-commit
+redis==5.0.8
+    # via
+    #   -c airflow-constraints.txt
+    #   celery
 referencing==0.35.1
     # via
     #   -c airflow-constraints.txt
     #   jsonschema
     #   jsonschema-specifications
+regex==2024.7.24
+    # via
+    #   -c airflow-constraints.txt
+    #   nltk
 requests==2.32.3
     # via
     #   -c airflow-constraints.txt
@@ -567,6 +715,8 @@ requests==2.32.3
     #   connexion
     #   opentelemetry-exporter-otlp-proto-http
     #   requests-toolbelt
+    #   spacy
+    #   weasel
 requests-toolbelt==1.0.0
     # via
     #   -c airflow-constraints.txt
@@ -582,6 +732,7 @@ rich==13.7.1
     #   apache-airflow
     #   flask-limiter
     #   rich-argparse
+    #   typer
 rich-argparse==1.5.2
     # via
     #   -c airflow-constraints.txt
@@ -595,18 +746,33 @@ setproctitle==1.3.3
     # via
     #   -c airflow-constraints.txt
     #   apache-airflow
+sgmllib3k==1.0.0
+    # via feedparser
+shellingham==1.5.4
+    # via
+    #   -c airflow-constraints.txt
+    #   typer
 six==1.16.0
     # via
     #   -c airflow-constraints.txt
+    #   langdetect
     #   prison
     #   python-dateutil
     #   rfc3339-validator
     #   wirerope
+smart-open==7.0.4
+    # via weasel
 sniffio==1.3.1
     # via
     #   -c airflow-constraints.txt
     #   anyio
     #   httpx
+spacy==3.7.6
+    # via -r requirements.in
+spacy-legacy==3.0.12
+    # via spacy
+spacy-loggers==1.0.5
+    # via spacy
 sqlalchemy==1.4.53
     # via
     #   -c airflow-constraints.txt
@@ -629,6 +795,12 @@ sqlparse==0.5.1
     # via
     #   -c airflow-constraints.txt
     #   apache-airflow-providers-common-sql
+srsly==2.4.8
+    # via
+    #   confection
+    #   spacy
+    #   thinc
+    #   weasel
 tabulate==0.9.0
     # via
     #   -c airflow-constraints.txt
@@ -645,10 +817,27 @@ text-unidecode==1.3
     # via
     #   -c airflow-constraints.txt
     #   python-slugify
+textblob==0.18.0.post0
+    # via -r requirements.in
+thinc==8.2.5
+    # via spacy
 time-machine==2.15.0
     # via
     #   -c airflow-constraints.txt
     #   pendulum
+tornado==6.4.1
+    # via
+    #   -c airflow-constraints.txt
+    #   flower
+tqdm==4.66.5
+    # via
+    #   -c airflow-constraints.txt
+    #   nltk
+    #   spacy
+typer==0.12.5
+    # via
+    #   spacy
+    #   weasel
 typing-extensions==4.12.2
     # via
     #   -c airflow-constraints.txt
@@ -656,9 +845,13 @@ typing-extensions==4.12.2
     #   flask-limiter
     #   limits
     #   opentelemetry-sdk
+    #   pydantic
+    #   pydantic-core
+    #   typer
 tzdata==2024.1
     # via
     #   -c airflow-constraints.txt
+    #   celery
     #   pendulum
 uc-micro-py==1.0.3
     # via
@@ -675,11 +868,29 @@ universal-pathlib==0.2.2
 urllib3==2.2.2
     # via
     #   -c airflow-constraints.txt
+    #   elastic-transport
     #   requests
+vine==5.1.0
+    # via
+    #   -c airflow-constraints.txt
+    #   amqp
+    #   celery
+    #   kombu
 virtualenv==20.26.3
     # via
     #   -c airflow-constraints.txt
     #   pre-commit
+wasabi==1.1.3
+    # via
+    #   spacy
+    #   thinc
+    #   weasel
+wcwidth==0.2.13
+    # via
+    #   -c airflow-constraints.txt
+    #   prompt-toolkit
+weasel==0.4.1
+    # via spacy
 werkzeug==2.2.3
     # via
     #   -c airflow-constraints.txt
@@ -697,6 +908,7 @@ wrapt==1.16.0
     # via
     #   -c airflow-constraints.txt
     #   deprecated
+    #   smart-open
 wtforms==3.1.2
     # via
     #   -c airflow-constraints.txt
