--- a/requirements.txt
+++ b/requirements.txt
@@ -768,11 +768,15 @@ sniffio==1.3.1
     #   anyio
     #   httpx
 spacy==3.7.6
-    # via -r requirements.in
+    # via
+    #   -r requirements.in
+    #   spacytextblob
 spacy-legacy==3.0.12
     # via spacy
 spacy-loggers==1.0.5
     # via spacy
+spacytextblob==4.0.0
+    # via -r requirements.in
 sqlalchemy==1.4.53
     # via
     #   -c airflow-constraints.txt
@@ -817,8 +821,10 @@ text-unidecode==1.3
     # via
     #   -c airflow-constraints.txt
     #   python-slugify
-textblob==0.18.0.post0
-    # via -r requirements.in
+textblob==0.15.3
+    # via
+    #   -r requirements.in
+    #   spacytextblob
 thinc==8.2.5
     # via spacy
 time-machine==2.15.0
