chore: Update spacy to version 3.7.6 and en_core_web_sm to version 3.7.0

--- a/requirements.in
+++ b/requirements.in
@@ -10,6 +10,9 @@ elasticsearch
 feedparser
 langdetect
 psycopg2-binary
-spacy
 spacytextblob
 textblob 
+
+# spacy
+spacy~=3.7.6
+en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.0/en_core_web_sm-3.7.0.tar.gz
