--- a/requirements.txt
+++ b/requirements.txt
@@ -184,7 +184,7 @@ clickclick==20.10.2
     # via
     #   -c airflow-constraints.txt
     #   connexion
-cloudpathlib==0.18.1
+cloudpathlib==0.19.0
     # via weasel
 colorama==0.4.6
     # via
@@ -260,6 +260,8 @@ email-validator==2.2.0
     # via
     #   -c airflow-constraints.txt
     #   flask-appbuilder
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.0/en_core_web_sm-3.7.0.tar.gz
+    # via -r requirements.in
 feedparser==6.0.11
     # via -r requirements.in
 filelock==3.15.4
@@ -770,6 +772,7 @@ sniffio==1.3.1
 spacy==3.7.6
     # via
     #   -r requirements.in
+    #   en-core-web-sm
     #   spacytextblob
 spacy-legacy==3.0.12
     # via spacy
