--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -288,10 +288,13 @@ services:
         condition: service_completed_successfully
 
   elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:7.17.0
+    image: docker.elastic.co/elasticsearch/elasticsearch:8.15.0
     environment:
       - discovery.type=single-node
       - ES_JAVA_OPTS=-Xms512m -Xmx512m
+      - xpack.security.enabled=false  # Disable security features
+      - xpack.security.http.ssl.enabled=false
+      - xpack.security.http.ssl.verification_mode=none
     ports:
       - "9200:9200"
     healthcheck:
@@ -303,7 +306,7 @@ services:
     restart: always
 
   kibana:
-    image: docker.elastic.co/kibana/kibana:7.17.0
+    image: docker.elastic.co/kibana/kibana:8.15.0
     ports:
       - "5601:5601"
     environment:
