--- a/requirements.in
+++ b/requirements.in
@@ -11,8 +11,10 @@ elasticsearch-dsl[async]
 feedparser
 langdetect
 psycopg2-binary
-spacytextblob
-textblob 
+sentence-transformers
+--extra-index-url https://download.pytorch.org/whl/cpu/
+torch
+transformers[torch]
 
 # spacy
 spacy~=3.7.6
