--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,10 @@
 #
 #    pip-compile --output-file=requirements.txt requirements.in
 #
+--extra-index-url https://download.pytorch.org/whl/cpu/
+
+accelerate==0.34.0
+    # via transformers
 aiohappyeyeballs==2.3.5
     # via
     #   -c airflow-constraints.txt
@@ -167,7 +171,6 @@ click==8.1.7
     #   clickclick
     #   flask
     #   flask-appbuilder
-    #   nltk
     #   typer
 click-didyoumean==0.3.1
     # via
@@ -273,6 +276,9 @@ feedparser==6.0.11
 filelock==3.15.4
     # via
     #   -c airflow-constraints.txt
+    #   huggingface-hub
+    #   torch
+    #   transformers
     #   virtualenv
 flask==2.2.5
     # via
@@ -340,6 +346,8 @@ fsspec==2024.6.1
     # via
     #   -c airflow-constraints.txt
     #   apache-airflow
+    #   huggingface-hub
+    #   torch
     #   universal-pathlib
 google-re2==1.1.20240702
     # via
@@ -376,6 +384,12 @@ httpx==0.27.0
     # via
     #   -c airflow-constraints.txt
     #   apache-airflow
+huggingface-hub==0.24.6
+    # via
+    #   accelerate
+    #   sentence-transformers
+    #   tokenizers
+    #   transformers
 humanize==4.10.0
     # via
     #   -c airflow-constraints.txt
@@ -420,12 +434,13 @@ jinja2==3.1.4
     #   flask-babel
     #   python-nvd3
     #   spacy
+    #   torch
 jmespath==0.10.0
     # via
     #   -c airflow-constraints.txt
     #   apache-airflow-providers-fab
 joblib==1.4.2
-    # via nltk
+    # via scikit-learn
 jsonschema==4.23.0
     # via
     #   -c airflow-constraints.txt
@@ -513,6 +528,10 @@ more-itertools==10.4.0
     # via
     #   -c airflow-constraints.txt
     #   apache-airflow-providers-common-sql
+mpmath==1.3.0
+    # via
+    #   -c airflow-constraints.txt
+    #   sympy
 multidict==6.0.5
     # via
     #   -c airflow-constraints.txt
@@ -523,8 +542,10 @@ murmurhash==1.0.10
     #   preshed
     #   spacy
     #   thinc
-nltk==3.9.1
-    # via textblob
+networkx==3.3
+    # via
+    #   -c airflow-constraints.txt
+    #   torch
 nodeenv==1.9.1
     # via
     #   -c airflow-constraints.txt
@@ -532,9 +553,14 @@ nodeenv==1.9.1
 numpy==1.26.4
     # via
     #   -c airflow-constraints.txt
+    #   accelerate
     #   blis
+    #   scikit-learn
+    #   scipy
+    #   sentence-transformers
     #   spacy
     #   thinc
+    #   transformers
 opentelemetry-api==1.26.0
     # via
     #   -c airflow-constraints.txt
@@ -582,15 +608,18 @@ ordered-set==4.1.0
 packaging==24.1
     # via
     #   -c airflow-constraints.txt
+    #   accelerate
     #   apache-airflow
     #   apispec
     #   connexion
     #   gunicorn
+    #   huggingface-hub
     #   limits
     #   marshmallow
     #   marshmallow-sqlalchemy
     #   spacy
     #   thinc
+    #   transformers
     #   weasel
 pathspec==0.12.1
     # via
@@ -600,6 +629,8 @@ pendulum==3.0.0
     # via
     #   -c airflow-constraints.txt
     #   apache-airflow
+pillow==10.4.0
+    # via sentence-transformers
 platformdirs==4.2.2
     # via
     #   -c airflow-constraints.txt
@@ -636,6 +667,7 @@ protobuf==4.25.4
 psutil==6.0.0
     # via
     #   -c airflow-constraints.txt
+    #   accelerate
     #   apache-airflow
 psycopg2-binary==2.9.9
     # via
@@ -699,10 +731,13 @@ pytz==2024.1
 pyyaml==6.0.2
     # via
     #   -c airflow-constraints.txt
+    #   accelerate
     #   apispec
     #   clickclick
     #   connexion
+    #   huggingface-hub
     #   pre-commit
+    #   transformers
 redis==5.0.8
     # via
     #   -c airflow-constraints.txt
@@ -715,16 +750,18 @@ referencing==0.35.1
 regex==2024.7.24
     # via
     #   -c airflow-constraints.txt
-    #   nltk
+    #   transformers
 requests==2.32.3
     # via
     #   -c airflow-constraints.txt
     #   apache-airflow
     #   apache-airflow-providers-http
     #   connexion
+    #   huggingface-hub
     #   opentelemetry-exporter-otlp-proto-http
     #   requests-toolbelt
     #   spacy
+    #   transformers
     #   weasel
 requests-toolbelt==1.0.0
     # via
@@ -751,6 +788,18 @@ rpds-py==0.20.0
     #   -c airflow-constraints.txt
     #   jsonschema
     #   referencing
+safetensors==0.4.4
+    # via
+    #   accelerate
+    #   transformers
+scikit-learn==1.5.1
+    # via sentence-transformers
+scipy==1.14.1
+    # via
+    #   scikit-learn
+    #   sentence-transformers
+sentence-transformers==3.0.1
+    # via -r requirements.in
 setproctitle==1.3.3
     # via
     #   -c airflow-constraints.txt
@@ -781,13 +830,10 @@ spacy==3.7.6
     #   -r requirements.in
     #   en-core-web-md
     #   en-core-web-sm
-    #   spacytextblob
 spacy-legacy==3.0.12
     # via spacy
 spacy-loggers==1.0.5
     # via spacy
-spacytextblob==4.0.0
-    # via -r requirements.in
 sqlalchemy==1.4.53
     # via
     #   -c airflow-constraints.txt
@@ -816,6 +862,10 @@ srsly==2.4.8
     #   spacy
     #   thinc
     #   weasel
+sympy==1.13.2
+    # via
+    #   -c airflow-constraints.txt
+    #   torch
 tabulate==0.9.0
     # via
     #   -c airflow-constraints.txt
@@ -832,16 +882,22 @@ text-unidecode==1.3
     # via
     #   -c airflow-constraints.txt
     #   python-slugify
-textblob==0.15.3
-    # via
-    #   -r requirements.in
-    #   spacytextblob
 thinc==8.2.5
     # via spacy
+threadpoolctl==3.5.0
+    # via scikit-learn
 time-machine==2.15.0
     # via
     #   -c airflow-constraints.txt
     #   pendulum
+tokenizers==0.19.1
+    # via transformers
+torch==2.4.0+cpu
+    # via
+    #   -r requirements.in
+    #   accelerate
+    #   sentence-transformers
+    #   transformers
 tornado==6.4.1
     # via
     #   -c airflow-constraints.txt
@@ -849,8 +905,14 @@ tornado==6.4.1
 tqdm==4.66.5
     # via
     #   -c airflow-constraints.txt
-    #   nltk
+    #   huggingface-hub
+    #   sentence-transformers
     #   spacy
+    #   transformers
+transformers[torch]==4.44.2
+    # via
+    #   -r requirements.in
+    #   sentence-transformers
 typer==0.12.5
     # via
     #   spacy
@@ -861,10 +923,12 @@ typing-extensions==4.12.2
     #   alembic
     #   elasticsearch-dsl
     #   flask-limiter
+    #   huggingface-hub
     #   limits
     #   opentelemetry-sdk
     #   pydantic
     #   pydantic-core
+    #   torch
     #   typer
 tzdata==2024.1
     # via
