--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,6 @@ _AIRFLOW_WWW_USER_PASSWORD=airflow
 
 # Additional PIP requirements (if any)
 _PIP_ADDITIONAL_REQUIREMENTS=
+
+# Models directory
+MODELS_DIR=./models/
