--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -329,8 +329,12 @@ services:
     ports:
       - "8000:8000"
     environment:
-      - ELASTICSEARCH_HOST=elasticsearch
-      - ELASTICSEARCH_PORT=9200
+      ELASTICSEARCH_HOST: elasticsearch
+      ELASTICSEARCH_PORT: 9200
+      OPENAI_API_KEY: ${OPENAI_API_KEY}
+    volumes:
+      - ./common:/app/common
+      - ./models:/app/models
     depends_on:
       - elasticsearch
     restart: always
