--- a/requirements.in
+++ b/requirements.in
@@ -12,6 +12,7 @@ elasticsearch-dsl[async]
 fastapi
 feedparser
 langdetect
+openai
 psycopg2-binary
 sentence-transformers
 --extra-index-url https://download.pytorch.org/whl/cpu/
