--- a/webserver/Dockerfile
+++ b/webserver/Dockerfile
@@ -1,30 +1,72 @@
-# Use the official Python image from the Docker Hub with a slim variant
-FROM python:3.11-slim
+# ARGs for Python builder and Distroless base images
+ARG PYTHON_BUILDER_IMAGE=python:3.11-slim
+ARG GOOGLE_DISTROLESS_BASE_IMAGE=gcr.io/distroless/base-debian12
+ARG CHIPSET_ARCH=x86_64-linux-gnu
 
-# Set environment variables to avoid Python writing .pyc files and to ensure stdout/stderr are unbuffered
+# First stage: Build the Python app in a slim Python image
+FROM ${PYTHON_BUILDER_IMAGE} AS python-base
+
+# Set environment variables
 ENV PYTHONUNBUFFERED=1 \
-    PYTHONDONTWRITEBYTECODE=1
+    PYTHONDONTWRITEBYTECODE=1 \
+    TRANSFORMERS_CACHE=/tmp/huggingface_cache \
+    LANG=C.UTF-8 \
+    LC_ALL=C.UTF-8 \
+    PYTHONFAULTHANDLER=1
 
-# Set the working directory in the container
 WORKDIR /app
 
-# Copy the requirements file into the container at /app
-COPY ./requirements.txt /app/webserver/requirements.txt
+# Create a non-root user and set up necessary directories
+RUN groupadd -r clio && useradd -r -g clio clio && \
+    mkdir -p /home/clio ${TRANSFORMERS_CACHE} && \
+    chown -R clio:clio /home/clio ${TRANSFORMERS_CACHE}
 
-# Install any needed packages specified in requirements.txt
-RUN pip install --no-cache-dir -r webserver/requirements.txt
-RUN pip list
+# Install required packages
+COPY requirements.txt /app/webserver/
+RUN pip install --no-cache-dir -r /app/webserver/requirements.txt
 
-# Create a non-root user and switch to that user
-RUN useradd -m myuser
-USER myuser
-
-# Copy the current directory contents into the container at /app
+# Copy the rest of the application code
 COPY . /app/webserver
 
-# Expose port 8000 for the FastAPI app
+# Final stage: Use distroless base image
+FROM ${GOOGLE_DISTROLESS_BASE_IMAGE}
+
+# ARG for architecture
+ARG CHIPSET_ARCH=x86_64-linux-gnu
+
+# Copy Python and installed packages from the python-base image
+COPY --from=python-base /usr/local/lib/ /usr/local/lib/
+COPY --from=python-base /usr/local/bin/ /usr/local/bin/
+
+# Copy necessary runtime libraries and binaries
+COPY --from=python-base \
+    /lib/${CHIPSET_ARCH}/libz.so.1 \
+    /lib/${CHIPSET_ARCH}/libexpat* \
+    /lib/${CHIPSET_ARCH}/ 
+COPY --from=python-base \
+    /usr/lib/${CHIPSET_ARCH}/libffi* \
+    /usr/lib/${CHIPSET_ARCH}/libgcc_s.so.1 \
+    /usr/lib/${CHIPSET_ARCH}/libstdc++.so.6 \
+    /usr/lib/${CHIPSET_ARCH}/
+COPY --from=python-base /bin/echo /bin/ln /bin/rm /bin/sh /bin/
+
+# Copy application and cache
+COPY --from=python-base /app /app
+COPY --from=python-base --chown=1000:1001 /tmp/huggingface_cache /tmp/huggingface_cache
+
+# Set environment variables
+ENV PYTHONUNBUFFERED=1 \
+    PYTHONDONTWRITEBYTECODE=1 \
+    TRANSFORMERS_CACHE=/tmp/huggingface_cache \
+    LANG=C.UTF-8 \
+    LC_ALL=C.UTF-8 \
+    PYTHONFAULTHANDLER=1
+
+# Use the non-root user
+USER 1000:1001
+
+WORKDIR /app
+
 EXPOSE 8000
 
-# Run the FastAPI app with gunicorn and uvicorn workers
-CMD ["gunicorn", "-w", "4", "-k", "uvicorn.workers.UvicornWorker", "--bind", "0.0.0.0:8000", "webserver.main:app"]
-# CMD ["sh"]
+ENTRYPOINT ["/usr/local/bin/gunicorn", "-w", "1", "-k", "uvicorn.workers.UvicornWorker", "--bind", "0.0.0.0:8000", "webserver.main:app"]
