--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -15,16 +15,17 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      # Set up Docker
+      # Set up Docker Buildx
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
       # Build the Docker image
       - name: Build Docker image
         run: |
-          docker build -t lhernandez0/clio:latest .
+          docker-compose build
+          docker tag clio:latest lhernandez0/clio:latest
 
-      # Push Docker image to Docker Hub (optional)
+      # Push Docker image to Docker Hub
       - name: Log in to Docker Hub
         uses: docker/login-action@v1
         with:
@@ -50,7 +51,12 @@ jobs:
           key: ${{ secrets.VPS_SSH_KEY }}
           port: 22
           script: |
+            # Pull the latest Docker image
             docker pull lhernandez0/clio:latest
+
+            # Stop and remove old container if it exists
             docker stop clio || true
             docker rm clio || true
+
+            # Run the new container
             docker run -d --name clio -p 80:8000 lhernandez0/clio:latest
