--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -29,14 +29,13 @@ jobs:
       - name: Build Docker image
         run: |
           docker-compose build
-          docker tag clio_airflow-webserver:latest lhernandez0/clio_airflow-webserver:latest
-          docker tag clio_airflow-scheduler:latest lhernandez0/clio_airflow-scheduler:latest
-          docker tag clio_airflow-worker:latest lhernandez0/clio_airflow-worker:latest
-          docker tag clio_airflow-triggerer:latest lhernandez0/clio_airflow-triggerer:latest
-          docker tag clio_airflow-init:latest lhernandez0/clio_airflow-init:latest
-          docker tag clio_airflow-cli:latest lhernandez0/clio_airflow-cli:latest
-          docker tag clio_flower:latest lhernandez0/clio_flower:latest
-          docker tag clio_webserver:latest lhernandez0/clio_webserver:latest
+          docker tag clio-airflow-webserver:latest lhernandez0/clio_airflow-webserver:latest
+          docker tag clio-airflow-scheduler:latest lhernandez0/clio_airflow-scheduler:latest
+          docker tag clio-airflow-worker:latest lhernandez0/clio_airflow-worker:latest
+          docker tag clio-airflow-triggerer:latest lhernandez0/clio_airflow-triggerer:latest
+          docker tag clio-airflow-init:latest lhernandez0/clio_airflow-init:latest
+          docker tag clio-airflow-cli:latest lhernandez0/clio_airflow-cli:latest
+          docker tag clio-clio_webserver:latest lhernandez0/clio_webserver:latest
 
       # Push Docker image to Docker Hub
       - name: Log in to Docker Hub
@@ -47,14 +46,13 @@ jobs:
 
       - name: Push Docker image
         run: |
-          docker push lhernandez0/clio_airflow-webserver:latest
-          docker push lhernandez0/clio_airflow-scheduler:latest
-          docker push lhernandez0/clio_airflow-worker:latest
-          docker push lhernandez0/clio_airflow-triggerer:latest
-          docker push lhernandez0/clio_airflow-init:latest
-          docker push lhernandez0/clio_airflow-cli:latest
-          docker push lhernandez0/clio_flower:latest
-          docker push lhernandez0/clio_webserver:latest
+          docker push lhernandez0/clio-airflow-webserver:latest
+          docker push lhernandez0/clio-airflow-scheduler:latest
+          docker push lhernandez0/clio-airflow-worker:latest
+          docker push lhernandez0/clio-airflow-triggerer:latest
+          docker push lhernandez0/clio-airflow-init:latest
+          docker push lhernandez0/clio-airflow-cli:latest
+          docker push lhernandez0/clio-clio_webserver:latest
 
   deploy:
     needs: build
