--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -73,13 +73,13 @@ x-airflow-common:
     # The following line can be used to set a custom config file, stored in the local config folder
     # If you want to use it, outcomment it and replace airflow.cfg with the name of your config file
     # AIRFLOW_CONFIG: '/opt/airflow/config/airflow.cfg'
-    PYTHONPATH: /opt/airflow/models:$PYTHONPATH
+    # PYTHONPATH: /opt/airflow/models:$PYTHONPATH
   volumes:
     - ${AIRFLOW_PROJ_DIR:-.}/dags:/opt/airflow/dags
     - ${AIRFLOW_PROJ_DIR:-.}/logs:/opt/airflow/logs
     - ${AIRFLOW_PROJ_DIR:-.}/config:/opt/airflow/config
     - ${AIRFLOW_PROJ_DIR:-.}/plugins:/opt/airflow/plugins
-    - ${MODELS_DIR:-.}:/opt/airflow/models
+    - ${MODELS_DIR:-.}:/opt/airflow/plugins/models
   user: "${AIRFLOW_UID:-50000}:0"
   depends_on:
     &airflow-common-depends-on
@@ -120,7 +120,6 @@ services:
 
   airflow-webserver:
     <<: *airflow-common
-    image: lhernandez0/clio_airflow-webserver:latest
     command: webserver
     ports:
       - "8080:8080"
@@ -140,7 +139,6 @@ services:
 
   airflow-scheduler:
     <<: *airflow-common
-    image: lhernandez0/clio_airflow-scheduler:latest
     command: scheduler
     healthcheck:
       test: ["CMD", "curl", "--fail", "http://localhost:8974/health"]
@@ -156,7 +154,6 @@ services:
 
   airflow-worker:
     <<: *airflow-common
-    image: lhernandez0/clio_airflow-worker:latest
     command: celery worker
     healthcheck:
       # yamllint disable rule:line-length
@@ -180,7 +177,6 @@ services:
 
   airflow-triggerer:
     <<: *airflow-common
-    image: lhernandez0/clio_airflow-triggerer:latest
     command: triggerer
     healthcheck:
       test: ["CMD-SHELL", 'airflow jobs check --job-type TriggererJob --hostname "$${HOSTNAME}"']
@@ -196,7 +192,6 @@ services:
 
   airflow-init:
     <<: *airflow-common
-    image: lhernandez0/clio_airflow-init:latest
     entrypoint: /bin/bash
     # yamllint disable rule:line-length
     command:
@@ -261,7 +256,6 @@ services:
 
   airflow-cli:
     <<: *airflow-common
-    image: lhernandez0/clio_airflow-cli:latest
     profiles:
       - debug
     environment:
@@ -278,7 +272,6 @@ services:
   # See: https://docs.docker.com/compose/profiles/
   flower:
     <<: *airflow-common
-    image: lhernandez0/clio_flower:latest
     command: celery flower
     profiles:
       - flower
@@ -333,7 +326,6 @@ services:
 
   clio_webserver:
     build: ./webserver
-    image: lhernandez0/clio_webserver:latest
     ports:
       - "8000:8000"
     environment:
