--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -3,7 +3,7 @@ name: CI/CD Pipeline
 on:
   push:
     branches:
-      - main # Deploy when the main branch is updated
+      - release
 
 jobs:
   build:
@@ -25,7 +25,7 @@ jobs:
           sudo curl -L "https://github.com/docker/compose/releases/download/$(curl -s https://api.github.com/repos/docker/compose/releases/latest | grep 'tag_name' | cut -d\" -f4)/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
           sudo chmod +x /usr/local/bin/docker-compose
 
-      # Build the Docker image
+      # Build the Docker images
       - name: Build Docker image
         run: |
           docker-compose build
@@ -36,7 +36,12 @@ jobs:
           docker tag clio-airflow-init:latest lhernandez0/clio_airflow-init:latest
           docker tag clio-clio_webserver:latest lhernandez0/clio_webserver:latest
 
-      # Push Docker image to Docker Hub
+      # List the Docker images
+      - name: List Docker images
+        run: |
+          docker images
+
+      # Push Docker images to Docker Hub
       - name: Log in to Docker Hub
         uses: docker/login-action@v1
         with:
