--- a/docker-compose.deploy.yaml
+++ b/docker-compose.deploy.yaml
@@ -50,7 +50,7 @@ x-airflow-common:
   # Comment the image line, place your Dockerfile in the directory where you placed the docker-compose.yaml
   # and uncomment the "build" line below, Then run `docker-compose build` to build the images.
   # image: ${AIRFLOW_IMAGE_NAME:-apache/airflow:2.10.0}
-  build: .
+  image: lhernandez0/clio-airflow-webserver:latest
   environment:
     &airflow-common-env
     AIRFLOW__CORE__EXECUTOR: CeleryExecutor
@@ -325,9 +325,9 @@ services:
     restart: always
 
   clio_webserver:
-    build: ./webserver
+    image: lhernandez0/clio-webserver
     ports:
-      - "8000:8000"
+      - "8001:8000"
     environment:
       ELASTICSEARCH_HOST: elasticsearch
       ELASTICSEARCH_PORT: 9200
