--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -99,6 +99,9 @@ jobs:
             # Fetch the latest changes
             git pull origin release
 
+            # Create Airflow logs directory
+            mkdir -p $AIRFLOW_PROJ_DIR/logs
+
             # Install Docker Compose if not already installed
             if ! docker-compose --version > /dev/null 2>&1; then
               sudo curl -L "https://github.com/docker/compose/releases/download/$(curl -s https://api.github.com/repos/docker/compose/releases/latest | grep "tag_name" | cut -d\" -f4)/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
