--- a/docker-compose.deploy.yaml
+++ b/docker-compose.deploy.yaml
@@ -51,6 +51,7 @@ x-airflow-common:
   # and uncomment the "build" line below, Then run `docker-compose build` to build the images.
   # image: ${AIRFLOW_IMAGE_NAME:-apache/airflow:2.10.0}
   image: lhernandez0/clio-airflow-common:latest
+  platform: linux/amd64
   environment:
     &airflow-common-env
     AIRFLOW__CORE__EXECUTOR: CeleryExecutor
