Refactor release pipeline and add pull request trigger

--- a/.github/workflows/ci-cd_release.yml
+++ b/.github/workflows/ci-cd_release.yml
@@ -75,8 +75,9 @@ jobs:
           key: ${{ secrets.VPS_SSH_KEY }}
           port: 22
           script: |
-            # Use bash explicitly
-            bash -c '
+            bash << 'EOT'
+            set -euo pipefail
+
             # Clone the repository if it doesn't already exist
             if [ ! -d "clio" ]; then
               git clone https://github.com/lhernandez0/clio.git
@@ -90,33 +91,33 @@ jobs:
 
             # Create a new .env file with the secrets
             cat << EOF > .env
-            AIRFLOW_IMAGE_NAME=${{ secrets.AIRFLOW_IMAGE_NAME }}
-            AIRFLOW_UID=${{ secrets.AIRFLOW_UID }}
-            AIRFLOW_PROJ_DIR=${{ secrets.AIRFLOW_PROJ_DIR }}
-            _AIRFLOW_WWW_USER_USERNAME=${{ secrets._AIRFLOW_WWW_USER_USERNAME }}
-            _AIRFLOW_WWW_USER_PASSWORD=${{ secrets._AIRFLOW_WWW_USER_PASSWORD }}
-            MODELS_DIR=${{ secrets.MODELS_DIR }}
-            OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }}
+            AIRFLOW_IMAGE_NAME="${{ secrets.AIRFLOW_IMAGE_NAME }}"
+            AIRFLOW_UID="${{ secrets.AIRFLOW_UID }}"
+            AIRFLOW_PROJ_DIR="${{ secrets.AIRFLOW_PROJ_DIR }}"
+            _AIRFLOW_WWW_USER_USERNAME="${{ secrets._AIRFLOW_WWW_USER_USERNAME }}"
+            _AIRFLOW_WWW_USER_PASSWORD="${{ secrets._AIRFLOW_WWW_USER_PASSWORD }}"
+            MODELS_DIR="${{ secrets.MODELS_DIR }}"
+            OPENAI_API_KEY="${{ secrets.OPENAI_API_KEY }}"
             EOF
 
             # Fetch the latest changes
             git pull origin release && git switch release
 
             # Create Airflow logs directory
-            mkdir -p ${{ secrets.AIRFLOW_PROJ_DIR }}/logs
+            mkdir -p "${{ secrets.AIRFLOW_PROJ_DIR }}/logs"
 
             # Install Docker Compose if not already installed
-            if ! docker-compose --version > /dev/null 2>&1; then
-              sudo curl -L "https://github.com/docker/compose/releases/download/$(curl -s https://api.github.com/repos/docker/compose/releases/latest | grep "tag_name" | cut -d\" -f4)/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+            if ! command -v docker-compose &> /dev/null; then
+              sudo curl -L "https://github.com/docker/compose/releases/download/$(curl -s https://api.github.com/repos/docker/compose/releases/latest | jq -r .tag_name)/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
               sudo chmod +x /usr/local/bin/docker-compose
             fi
 
             # Pull the latest Docker images
-            docker-compose --env-file .env  -f docker-compose.deploy.yaml pull
+            docker-compose --env-file .env -f docker-compose.deploy.yaml pull
 
             # Stop and remove old containers and networks
-            docker-compose --env-file .env  -f docker-compose.deploy.yaml down
+            docker-compose --env-file .env -f docker-compose.deploy.yaml down
 
             # Run the new containers
-            docker-compose --env-file .env  -f docker-compose.deploy.yaml up -d
-            '
+            docker-compose --env-file .env -f docker-compose.deploy.yaml up -d
+            EOT
