Fix Docker Compose installation path in release CI/CD workflow

--- a/.github/workflows/ci-cd_release.yml
+++ b/.github/workflows/ci-cd_release.yml
@@ -111,7 +111,7 @@ jobs:
             # Install Docker Compose if not already installed
             if ! command -v docker-compose &> /dev/null; then
               sudo curl -L "https://github.com/docker/compose/releases/download/$(curl -s https://api.github.com/repos/docker/compose/releases/latest | jq -r .tag_name)/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
-              sudo chmod +x /usr/local/bin/docker-compose
+              sudo chmod +x /usr/bin/docker-compose
             fi
 
             # Pull the latest Docker images
